# wifi-sight

./: .gitignore  CLAUDE.md  start.bat
.claude/: settings.local.json
backend/: detector.py  main.py  models.py  pyproject.toml  requirements.txt  scanner.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ActivityTimeline.jsx  BSSIDDetail.jsx  NetworkList.jsx  PresenceIndicator.jsx  RadarMap.jsx  SignalChart.jsx  StatusBar.jsx
frontend/src/hooks/: useWebSocket.js
